solc_mutator_ossfuzz_seed_corpus/test_sol/test_421cd29ac64455aa0125b97e7221e32d88fa4c5dfaf969264ce3701b69f4384e_0bad668cbd9c3d0e51691cafea131a40ea40eb8c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(bool i0,int168 i1) internal    returns(address payable o0,function () external   o1,address[][10][5][][4] memory o2)
  {
    (o2[(uint256((((uint224(26959946667150639794667015087019630673637144422540572481103610249215) != uint224(0)) ? false : true) ? uint56(72057594037927935) : uint56(72057594037927935))) + uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935))], o2[uint256(0)]) = (new address[][10][5][](10), o2[(uint256(0) * (uint256(42319212992924660256837742567295381389629914704613067349680672962017014028412) * (uint256(85795767863585609230674400322984213793180874322031789692208698360646453455410) | uint256(14409692450635946035570668689291152629722716635282298737690617659296045245949))))]);
  }
  function f1(uint144 i0) external    returns(function () external   o0,address payable o1)
  {
    address l0 = address(0x0000000000000000000000000000000000000004);
    int160 l1 = int160(0);
  }
}
contract C0 {
  fallback() external   
  {
  }
  using L0 for *;
  bool immutable public s0;
  constructor(bool i0)   {
    s0 = true;
    unchecked {
      bool  l0 = s0;
      bool  l1 = l0;
      assert(l1 == s0);
      revert(string.concat(string("ffffffffffffffffffffffffffffffffffffffff0000000000000000000000000000000000000000000000000000"), string.concat(string("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"), string("0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"), (false ? string("4900000000000000000000000000000000000000000000000000000000000000") : string("ae26d87ed451805d8e86715c000000000000000000000000000000000000"))), string("ffffffffffffffffffffff0000000000000000000000000000000000000000000000000000000000")));
    }
  }
  using L0 for *;
}
// ----
// Warning 5667: (su0.sol:53-60): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:61-70): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:92-110): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:111-136): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:809-819): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:841-866): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:867-885): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:895-905): Unused local variable.
// Warning 2072: (su0.sol:965-974): Unused local variable.
// Warning 5667: (su0.sol:1101-1108): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2018: (su0.sol:41-794): Function state mutability can be restricted to pure
// Warning 2018: (su0.sol:797-991): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
